@@ -3,6 +3,7 @@
 - Added a new 'eval_getcraftingcard'. This can get the crafting card out of an inventory that can craft the given item
 - Added ore dictionary support for 'do_pushworkbench'
 - Added ore dictionary support for 'eval_ingredients'
+- The 'net list' command will now also show crafting stations
 
 2.0.1:
 - Fixed a bug where oredictionary matching was broken for 'get_ingredients_smart'
